# vectis

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md
.cursor/skills/code-reviewer/: SKILL.md
.cursor/skills/code-reviewer/references/: crux-review-checks.md  logic-review-checks.md
.cursor/skills/core-reviewer/: SKILL.md
.cursor/skills/core-reviewer/references/: general-review-checks.md
.cursor/skills/core-writer/: SKILL.md  app-spec-template.md
.cursor/skills/core-writer/references/: crux-app-pattern.md  crux-capabilities.md  crux-command-api.md  crux-custom-capabilities.md  crux-ffi-scaffolding.md  crux-project-config.md
.cursor/skills/core-writer/references/examples/: 01-simple-counter.md  02-http-counter.md  03-kv-notes.md
.cursor/skills/crux-gen/: SKILL.md
.cursor/skills/crux-gen/references/: crux-app-pattern.md  crux-custom-capabilities.md  crux-ffi-scaffolding.md  crux-project-config.md
.cursor/skills/crux-gen/references/examples/: 01-simple-counter.md  03-kv-notes.md
.cursor/skills/design-system-writer/: SKILL.md
.cursor/skills/design-system-writer/references/: swift-token-templates.md
.cursor/skills/ios-reviewer/: SKILL.md
.cursor/skills/ios-reviewer/references/: ios-review-checks.md  swift-quality-checks.md
.cursor/skills/ios-writer/: SKILL.md  shell-spec-template.md
.cursor/skills/ios-writer/references/: crux-ios-shell-pattern.md  design-system-integration.md  ios-project-config.md  swiftui-view-patterns.md
.cursor/skills/ios-writer/references/examples/: 01-simple-counter-ios.md  02-http-counter-ios.md
.github/workflows/: ci.yaml  patch.yaml  publish.yaml  release.yaml
design-system/: spec.md  tokens.yaml
design-system/ios/: Package.swift
design-system/ios/.build/index-build/: build.db  plugin-tools.yaml
design-system/ios/.build/index-build/arm64-apple-macosx/debug/: description.json
design-system/ios/Sources/VectisDesign/: Colors.swift  Spacing.swift  Theme.swift  Typography.swift
examples/opsx_todo/: Cargo.toml  clippy.toml
examples/opsx_todo/iOS/: .gitignore  Makefile  project.yml
examples/opsx_todo/iOS/Todo/: ContentView.swift  Core.swift  TodoApp.swift
examples/opsx_todo/iOS/Todo.xcodeproj/: project.pbxproj
examples/opsx_todo/iOS/Todo.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
examples/opsx_todo/iOS/Todo/Views/: ErrorScreen.swift  LoadingScreen.swift  TodoListScreen.swift
examples/opsx_todo/shared/: Cargo.toml
examples/opsx_todo/shared/shared.xcodeproj/: project.pbxproj
examples/opsx_todo/shared/src/: app.rs  lib.rs  sse.rs
examples/todo/: Cargo.toml  spec.md
examples/todo/shared/: Cargo.toml
examples/todo/shared/src/: app.rs  ffi.rs  lib.rs  sse.rs
openspec/: config.yaml
openspec/changes/archive/2026-03-10-create-opsx-todo/: .openspec.yaml  app-spec.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-11-fix-opsx-todo-logic-bugs/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-11-fix-opsx-todo-logic-bugs/specs/sync-logic/: spec.md
openspec/changes/archive/2026-03-16-create-opsx-todo/: proposal.md  tasks.md
openspec/changes/archive/2026-03-16-create-opsx-todo-ios/: .openspec.yaml  proposal.md  shell-spec.md  tasks.md
openspec/changes/archive/2026-03-16-opsx-todo/: .openspec.yaml  app-spec.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-16-review-opsx-todo-2026-03-16t07-14/: design.md  proposal.md  tasks.md
openspec/changes/create-opsx-todo/: tasks.md
openspec/changes/create-opsx-todo-ios/: design.md  proposal.md  tasks.md
openspec/changes/create-opsx-todo-ios/specs/ios-shell/: spec.md
openspec/changes/fix-opsx-todo-logic-bugs/: tasks.md
openspec/changes/opsx-todo/: tasks.md
openspec/schemas/crux-app/: schema.yaml
openspec/schemas/crux-app/templates/: app-spec.md  proposal.md  tasks.md
openspec/schemas/ios-shell/: schema.yaml
openspec/schemas/ios-shell/templates/: proposal.md  shell-spec.md  tasks.md
skills/: README.md
skills/crux-gen/: SKILL.md  app-spec-template.md
skills/crux-gen/references/: crux-app-pattern.md  crux-capabilities.md  crux-ffi-scaffolding.md  crux-project-config.md  crux-testing-patterns.md
skills/crux-gen/references/examples/: 02-http-counter.md
(+233 files in other folders)
