[workspace]
members = ["shared"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
crux_core = { git = "https://github.com/redbadger/crux", branch = "master" }
crux_http = { git = "https://github.com/redbadger/crux", branch = "master" }
crux_kv = { git = "https://github.com/redbadger/crux", branch = "master" }
serde = "1.0"
serde_json = "1.0"
facet = "=0.31"
