[package]
name = "shared"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib", "staticlib"]

[[bin]]
name = "codegen"
required-features = ["codegen"]

[features]
uniffi = ["dep:uniffi"]
wasm_bindgen = ["dep:wasm-bindgen", "getrandom/wasm_js"]
codegen = [
    "crux_core/cli",
    "crux_http/facet_typegen",
    "crux_kv/facet_typegen",
    "dep:clap",
    "dep:pretty_env_logger",
    "uniffi",
]
facet_typegen = [
    "crux_core/facet_typegen",
    "crux_http/facet_typegen",
    "crux_kv/facet_typegen",
]

[dependencies]
crux_core.workspace = true
crux_http.workspace = true
crux_kv.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
facet.workspace = true
log = "0.4"
async-sse = "5"
futures = "0.3"

clap = { version = "4", optional = true, features = ["derive"] }
getrandom = { version = "0.3", optional = true, default-features = false }
pretty_env_logger = { version = "0.5", optional = true }
uniffi = { version = "0.31", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[lints]
workspace = true
